Added Bouncing Ball project here
Signed-off-by: Venkatesan Mahendran <venkatesan.mahendran@gmail.com>

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </header>
       <section>
-        <p>newly hosted</p>
+        <p><a href="bouncing-ball/bouncing-ball.html">Bouncing Ball</a></p>
       </section>
     </div>
     <footer>
