JSON Data Feed JS Application

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </ul>
       </header>
       <section>
+		<p>JavaScript Apps</p>
         <p><a href="bouncing-ball/bouncing-ball.html">Bouncing Ball</a></p>
+		<p><a href="bouncing-ball/bouncing-ball.html">JSON Data Feed</a></p>
       </section>
     </div>
     <footer>
