--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <section>
 		<p>JavaScript Apps</p>
         <p><a href="bouncing-ball/bouncing-ball.html">Bouncing Ball</a></p>
-		<p><a href="bouncing-ball/data_feed_json.html">JSON Data Feed</a></p>
+		<p><a href="data_feed_json">JSON Data Feed</a></p>
       </section>
     </div>
     <footer>
