Single page app using backbone

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
         </ul>
       </header>
       <section>
-		<p>JavaScript Apps</p>
+		    <p>JavaScript Apps</p>
         <p><a href="bouncing-ball/bouncing-ball.html">Bouncing Ball</a></p>
-		<p><a href="data_feed_json">JSON Data Feed</a></p>
+		    <p><a href="data_feed_json">JSON Data Feed</a></p>
+        <p><a href="layout-using-backbone/index.html">Layout Using Backbone [Single Page App]</a></p>
       </section>
     </div>
     <footer>
